修改运行脚本